style.css
:root {
  --bgr-blue: #253878;
  --letter-gray: #7a7a7a;
  --bgr-gray: #03070f;
  --blckBgr: rgba(3, 7, 15, 0.99);
  /* --bgr-gray: #010104; */
  --blgray: #d3dde6;
  --lightblue: #44b0de;
  --goldenNew: #f7d16e;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  background-color: var(--blckBgr);
  /* background: url("./img/rascacielos.png") no-repeat center center fixed;
    background-size: cover; */
}

body,
::after,
::before {
  padding: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  font-family: "Federo", sans-serif;
  font-size: 15px;
  color: var(--blgray);
}

.hero {
  width: 100%;
  position: relative;
  height: auto;
}

.navbar {
  display: flex;
  place-content: center space-between;
  background-color: var(--blckBgr);
  align-items: center;
  width: 100%;
  top: 0;
  position: fixed;
  z-index: 1;
}

.navbar a {
  text-decoration: none;
  cursor: pointer;
}

.navbar-container {
  display: flex;
  align-items: center;
  width: 100%;
}

.nav-container-1 {
  display: flex;
  align-items: center;
  margin: 0 0.5em;
  flex: 2;
  font-size: 0.9em;
  gap: 1.3em;
}

.nav-container-2 {
  flex: 2;
  gap: 0.6em;
  justify-content: space-evenly;
}

.nav-container-2 a {
  font-size: 1em;
}

.nav-container-2 a:hover {
  border-bottom: 1px solid var(--lightblue);
}

/* responsive navbar toggle */

.navbar_toggle {
  display: none;
  flex-direction: column;
  justify-content: space-around;
  width: 15%;
  height: 1.4em;
}

.navbar_toggle span.arrow-down {
  width: 100%;
  font-size: 5vw;
  padding: 0.2em 0;
  text-align: center;
  background-color: var(--blckBgr);
  color: var(--lightblue);
  border-radius: 3em;
}

/* header logo */

.header-logo {
  width: 11em;
  margin: 0.5em;
}

.header-logo-name {
  width: 14em;
  padding-bottom: 1em;
  border-bottom: 1px solid var(--lightblue);
}

.slideShow {
  width: 100%;
  position: relative;
  margin-top: 19vh;
  /* height: 100vh; */
}

.slide img {
  width: 100%;
  height: auto;
}

.slide {
  display: none;
}

/* arrows */

.arrow-prev,
.arrow-next,
.img-txt {
  color: var(--blgray);
  font-size: 5em;
  font-weight: lighter;
  position: absolute;
  top: 40%;
  width: auto;
  padding: 0 0.2em;
  border-radius: 0 3px 3px 0;
  cursor: pointer;
  user-select: none;
  -webkit-user-select: none;
}

.arrow-prev {
  left: 0;
}

.arrow-next {
  right: 0;
}

h4.img-txt {
  width: 65%;
  top: 37%;
  left: 17%;
  padding: 0.5em;
  color: var(--blgray);
  cursor: none;
  text-align: center;
  font-size: 3.1vw;
  text-shadow: 2px 2px 2px var(--bgr-gray);
}

.text-bgr {
  position: absolute;
  background-color: var(--bgr-blue);
  width: 100%;
  height: 99.5%;
  top: 0;
  left: 0;
  right: 0;
  opacity: 0.6;
}

/* arrows */

/* welcome */
.welcome-section,
.about-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin: 0 auto;
  background-color: var(--bgr-gray);
  opacity: 0.9;
  /* padding: 1em; */
  /* border-radius: .5em;    */
}

.welcome-section h2,
.welcome-section p {
  width: 65%;
  text-align: center;
  font-size: 1.5em;
  /* margin: .5em; */
  padding: 1em;
}

.about-container {
  background: var(--bgr-gray);
  /* background: url('./img/moon.png') center center; */
  background-repeat: no-repeat;
  background-size: cover;
  background-position: right;
  position: relative;
}

.about-img-container h1 {
  font-size: 3.3vw;
  text-align: center;
  color: var(--blgray);
  /* text-shadow: 1px 1px var(--blgray); */
  padding: 0.1em;
  border-radius: 0.3em;
  opacity: 0.8;
}

.description-container {
  background: url("./img/black.png") no-repeat center center fixed;
  background-size: cover;
  display: grid;
  gap: 1em;
  grid-template-columns: repeat(auto-fit, minmax(14vw, 1fr));
  justify-content: space-evenly;
  width: 85%;
  margin: auto;
  padding: 1em;
  border-radius: 0.5em;
}

.container-item {
  /* background-image: url("./img/rock.png"); */
  width: 100%;
  height: auto;
  border-radius: 0.5em;
  /* opacity: .8; */
  /* background-color: var(--blgray); */
}

.container-item p,
.container-item h2 {
  color: var(--blgray);
  text-shadow: 2px 2px 2px var(--bgr-gray);
  font-size: 2vw;
  padding: 0.5em;
  margin: 0.2em auto;
  /* background-color: var(--blgray); */
  text-align: center;
  border-radius: 0.2em;
}

.item-1 {
  grid-column-start: 1;
}

.item-2 {
  grid-column-start: 3;
}

.item-3 {
  grid-column-start: 2;
  grid-column-end: 3;
}

.item-4 {
  grid-column-start: 1;
}

.item-5 {
  grid-column-start: 3;
}

.support-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: auto;
  margin: 0 auto;
  background-color: var(--bgr-gray);
  /* border-radius: .5em; */
  opacity: 0.9;
}

.support-container h2,
.support-container p {
  width: 65%;
  margin: 0 auto;
  font-size: 1.5em;
  padding: 1em;
  text-align: center;
}

.img-prefooter {
  width: 100%;
  bottom: 0;
}

.footer-span {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1em;
  gap: 1.3em;
}

.footer-span a {
  text-decoration: none;
  color: var(--blgray);
}

.footer-span span {
  font-size: 1.5em;
  /* padding: .5em; */
  text-decoration: none;
  color: var(--blgray);
}

.footer-span a svg {
  font-size: 1.5em;
}

/* MODAL ONE CONTAINER ONE */

.modal-container {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  height: 100%;
  overflow: auto;
  background-color: #000;
  background-color: rgba(0, 0, 0, 0.4);
  width: 100%;
  -webkit-animation-name: animatetop;
  -webkit-animation-duration: 0.4s;
  animation-name: animatetop;
  animation-duration: 0.4s;
}

@keyframes animatetop {
  from {
    top: -300px;
    opacity: 0;
  }
  to {
    top: 0;
    opacity: 1;
  }
}

.modal-content {
  margin: 11% auto;
  padding: 0.3em;
  border-radius: 0.5em;
  width: 80%;
  background-color: var(--bgr-gray);
}
/* ... */

